fix modal off center position

--- a/frontend/components/buttonsBar/buttonsBar.css
+++ b/frontend/components/buttonsBar/buttonsBar.css
@@ -31,3 +31,8 @@
     text-decoration: none;
     color: black
 } */
+.pleaseNavLink:visited {
+    color: black;
+    text-decoration: none;
+
+}
