--- a/frontend/components/modals/modal.css
+++ b/frontend/components/modals/modal.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   z-index: 999; 
-
+  
 }
 
 .modal-background {
@@ -28,7 +28,7 @@
   height: 700px;
 }
 
-.wide .modal-content {
+/* .modal .wide .modal-content {
   width: 900px;
   height: 700px;
-}
+} */
