--- a/frontend/components/navigation/Navigation.css
+++ b/frontend/components/navigation/Navigation.css
@@ -63,7 +63,8 @@
 }
 
 .NavLink:visited {
-     color: black;
+    color: black;
+    text-decoration: none;
 }
 
 .home:visited {
